# taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  feature_pipeline_bis.yml  feature_pipeline_with_cache.yml  inference_pipeline.yaml
notebooks/: 01-load-and-validate-raw-data.ipynb  02_transfomed_raw_data_into_time_series_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_catboost_model.ipynb  10_lightgbm_model_with_feature_engineering.ipynb  10b_catboost_tmodel_with_feature_engineering.ipynb  11_lightgbm_model_with_hyperparameter_tuning.ipynb  12_catboost_model_with_hyperparameter_tuning.ipynb  13_backfill_feature_store.ipynb  14_feature_pipeline.ipynb  15_model_training_pipeline.ipynb  16_inference_pipeline.ipynb  17_monitoring_demo.ipynb  18_frontend_demo.ipynb
scripts/: backfill_inference.py  feature_pipeline.py
src/: config.py  data.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  logger.py  model.py  monitoring.py  paths.py
