[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mamadou Camara <mcamara@aneo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.28.2"
pandas = "^1.5.3"
pyarrow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
