[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mamadou Camara <mcamara@aneo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
jupyter = "^1.0.0"
requests = "^2.28.2"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
plotly = "^5.13.1"
tqdm = "^4.65.0"
nbformat = "^5.7.3"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.4"
lightgbm = "^3.3.5"
catboost = "^1.1.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
